--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "moleculer-compressed-stream-test",
+  "name": "my-project",
   "version": "1.0.0",
-  "description": "My Moleculer-based microservice",
+  "description": "My Moleculer-based microservices project",
   "scripts": {
-    "dev1": "moleculer-runner --repl --hot service1.service.js",
-    "dev2": "moleculer-runner --repl --hot service2.service.js",
+    "build": "tsc --build tsconfig.json",
+    "dev1": "ts-node --project tsconfig.json ./node_modules/moleculer/bin/moleculer-runner.js --hot --repl --config moleculer.config.ts services/**/receiver.service.ts",
+    "dev2": "ts-node --project tsconfig.json ./node_modules/moleculer/bin/moleculer-runner.js --hot --repl --config moleculer.config.ts services/**/sender.service.ts",
+    "start": "moleculer-runner --config dist/moleculer.config.js",
+    "cli": "moleculer connect NATS",
     "ci": "jest --watch",
     "test": "jest --coverage"
   },
@@ -14,16 +17,44 @@
   ],
   "author": "",
   "devDependencies": {
-    "jest": "^25.1.0",
-    "jest-cli": "^25.1.0",
-    "moleculer-repl": "^0.6.2"
+    "jest": "^28.1.1",
+    "jest-cli": "^28.1.1",
+    "moleculer-repl": "^0.7.1",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.1"
   },
   "dependencies": {
-    "memorystream": "^0.3.1",
+    "@sentry/integrations": "^7.3.0",
+    "@sentry/node": "^7.3.0",
+    "@types/jest": "^28.1.3",
+    "@types/mkdirp": "^1.0.0",
+    "@types/node": "^18.0.0",
     "moleculer": "^0.14.0",
-    "nats": "^1.3.2"
+    "moleculer-decorators": "^1.3.0",
+    "nats": "^2.7.1",
+    "typescript": "^4.7.4"
   },
   "engines": {
     "node": ">= 10.x.x"
+  },
+  "jest": {
+    "coverageDirectory": "<rootDir>/coverage",
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "testMatch": [
+      "**/*.spec.(ts|js)"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.json"
+      }
+    }
   }
 }
